--- a/.env
+++ b/.env
@@ -3,4 +3,5 @@ DB_USER=kemelOnlineWeb
 DB_PASSWORD=Kemel2025@
 DB_NAME=kemelOnline
 ACCESS_TOKEN_SECRET=kemelOnline_2025_token
+REFRESH_TOKEN_SECRET=kemelOnline_2025_refresh_token
 TOKEN_EXPIRATION=10m
